# ai-homework

./: .gitignore  CMakeLists.txt  main.cpp
include/: binaryTree.h  dsf_and_bfs_1.h  graph.h
include/math/: calculus.h  constants.h  core.h  linear_algebra.h  math.h  math_test.h  types.h
include/math/linear_algebra/: Matrix.h  Tensor.h  Vec.h
include/ml/: Perceptron.h  activations.h  ml.h
src/: binaryTree.cpp  dsf_and_bfs_1.cpp  graph.cpp  math_test.cpp
